# contrackr

./: .gitignore  BUILD.bazel  FAQ.md  README.md  WORKSPACE  go.mod  go.sum  single_syn.pcap
.github/workflows/: ci.yml  release.yml
cmd/: BUILD.bazel  contrackr.go
pkg/contrackr/engine/: BUILD.bazel  capturer.go  capturer_test.go  engine.go  engine_test.go  iptables.go  iptables_test.go  parser.go  tracker.go  tracker_test.go
pkg/contrackr/engine/testdata/: bogus.txt  icmp.pcap  ipv6.pcap  single_ack.pcap  single_syn_plus_corrupt.pcap
