load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

exports_files(["contrackr.go"])

go_library(
    name = "cmd_lib",
    srcs = ["contrackr.go"],
    importpath = "github.com/michaelmcallister/contrackr/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/contrackr/engine",
        "@com_github_golang_glog//:glog",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
    ],
)

go_binary(
    name = "contrackr",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
