load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "engine",
    srcs = [
        "capturer.go",
        "engine.go",
        "iptables.go",
        "tracker.go",
    ],
    importpath = "github.com/michaelmcallister/contrackr/pkg/contrackr/engine",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_coreos_go_iptables//iptables",
        "@com_github_golang_glog//:glog",
        "@com_github_google_gopacket//:gopacket",
        "@com_github_google_gopacket//layers",
        "@com_github_google_gopacket//pcap",
    ],
)

go_test(
    name = "engine_test",
    srcs = ["capturer_test.go"],
    data = glob(["testdata/**"]),
    embed = [":engine"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
